--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,152 @@
 
 body {
+    color: #40514E;
     margin: 0;
+    text-align: center;
+    font-family: 'Merriweather', serif;
 }
 
 h1 {
-    margin: 0;
+    margin: 50px, auto, 0px, auto;
+    font-size: 5.625rem;
+    color:#66BFBF;
+    font-family: 'Sacramento', cursive;
+}
+
+h2 {
+    font-size: 5.625rem;
+    color: #66BFBF;
+    font-weight: normal;
+    font-family: 'Montserrat', sans-serif;
+    padding-bottom: 10px;
+}
+
+p {
+    line-height: 2;
+}
+
+hr {
+    border: dotted #EAF6F6;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px, auto;
+}
+
+a {
+  color: #11999E;  
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
+}
+
+a:hover {
+   color: #EAF6F6; 
+}
+
+.copyright {
+    color: #EAF6F6;
+    font-size: 0.75rem;
+    padding: 20px 0;
 }
 
 .top-container {
     background-color: #F7ECDE;
+    position: relative;
+    padding-top: 100px;
+}
+
+.top-cloud {
+    position: absolute;
+    right: 300px;
+    bottom: 300px;
+    top: 40px;
 }
 
 .middle-container {
-    background-color: red;
-    height: 200px;
-    width: 200px;
+    margin: 100px, 0;
 }
 
 .bottom-container {
-    background-color: blue;
-    height: 200px;
-    width: 200px;
+    background-color: #66BFBF;
+    margin: 20px, 20px, 20px, 20px;
+    padding: 50px 0 20px;
+}
+
+.bottom-cloud {
+    position: absolute;
+    left: 250px;
+    bottom: 300px;
+}
+
+.top-cloud {
+    position: absolute;
+    right: 200px;
+    top: 50px;
+}
+
+.profile-image {
+    border-radius: 50%;
+    max-width: 25%;
+    height: auto;
+    padding: 15px;
+}
+
+.contact-message {
+    width: 40%;  
+    margin: 40px auto 60px;
+}
+
+.btn {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: 'Montserrat', sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
+      
+.btn:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+}
+
+.intro {
+    width: 30%;
+    margin: auto;
+}
+
+.skill-row {
+    /* width: 50%; */
+    margin: 100px, auto, 100px, auto;
+    text-align: left;
+}
+
+.matrix {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 35%;
+  border-radius: 50%;
+  float: left;
+  padding:15px;
+}
+
+.vs-code {
+  margin-left: 30;
+  width: 25%;
+  border-radius: 50%;
+  float: right;
 }
